test/tests/errors/error-array-cannot-const.sm
// true
// false
/**/
/**/

program {
    array x[1:2];
    const y = x;
}